--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     //compile 'com.google.code.gson:gson:2.2.4'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'de.greenrobot:eventbus:2.2.1'
     compile 'com.google.code.gson:gson:2.4'
 }
