--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'de.greenrobot:eventbus:2.2.1'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.facebook.fresco:fresco:0.9.0+'
 }
