--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.DetailActivity"
+            android:name=".view.CharacterDetailActivity"
             android:parentActivityName=".view.HomeActivity" />
         <activity
             android:name=".view.HouseDetailActivity"
